Fixed page title on model not found error page.  Added nowrap to namebadges

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -196,6 +196,7 @@ div.name-badge-RMN {
   line-height: 1;
   text-transform: uppercase;
   vertical-align: middle;
+  white-space: nowrap;
 }
 
 div.name-badge-GSN {
@@ -215,6 +216,7 @@ div.name-badge-GSN {
   vertical-align: middle;
   color: #ffffff;
   font-family: Optima, Arial, Helvetica, Verdana, Sans Serif;
+  white-space: nowrap;
 }
 
 div.name-badge-wrapper {
